tests/ui/rust-2024/unsafe-extern-blocks/safe-trait.rs
safe trait Foo {}
//~^ ERROR expected one of `!` or `::`, found keyword `trait`

fn main() {}
